--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
     "default_format": "show_all",
     "download_directory": "media",
     "history_file": "download_history.csv",
-    "mp3_quality": "192"
+    "mp3_quality": "192",
+    "video_directory": "videos"
 }
