--- a/requirements.txt
+++ b/requirements.txt
@@ -1,182 +1,183 @@
-aiohttp==3.8.5
-aiosignal==1.3.1
-annotated-types==0.5.0
-ansicon==1.89.0
-anyio==3.7.1
-astroid==2.15.6
-async-timeout==4.0.3
-attrs==23.1.0
-backoff==2.2.1
-beautifulsoup4==4.12.2
-black==23.7.0
-blessed==1.20.0
-blinker==1.6.2
-Brotli==1.1.0
-bs4==0.0.1
-certifi==2023.7.22
-cffi==1.15.1
-cfgv==3.3.1
-charset-normalizer==3.2.0
-chromedriver==2.24.1
-click==8.1.6
-colorama==0.4.6
-config==0.5.1
-contourpy==1.1.0
-cryptography==44.0.2
-cycler==0.11.0
-dataclasses-json==0.5.14
-decorator==5.2.1
-dill==0.3.7
-distlib==0.3.7
-dnspython==2.4.1
-email-validator==2.0.0.post2
-exceptiongroup==1.1.2
-fastapi==0.100.1
-filelock==3.12.2
-flake8==6.0.0
-fonttools==4.42.1
-frozenlist==1.4.0
-fsspec==2023.9.0
-ghp-import==2.1.0
-greenlet==3.1.1
-h11==0.14.0
-h2==4.2.0
-hpack==4.1.0
-httpcore==0.17.3
-httptools==0.6.0
-httpx==0.24.1
-huggingface-hub==0.16.4
-hyperframe==6.1.0
-identify==2.5.26
-idna==3.4
-iniconfig==2.0.0
-inquirer==3.1.3
-interchange==2021.0.4
-isort==5.12.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jinxed==1.2.0
-jmespath==1.0.1
-kaitaistruct==0.10
-kiwisolver==1.4.5
-langchain==0.0.281
-langsmith==0.0.33
-lazy-object-proxy==1.9.0
-loguru==0.7.3
-lxml==5.3.2
-Markdown==3.4.4
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-matplotlib==3.7.2
-mccabe==0.7.0
-mdurl==0.1.2
-mergedeep==1.3.4
-mkdocs==1.5.2
-mkdocs-material==9.1.21
-mkdocs-material-extensions==1.1.1
-monotonic==1.6
-MouseInfo==0.1.3
-multidict==6.0.4
-mypy==1.4.1
-mypy-extensions==1.0.0
-networkx==3.1
-nodeenv==1.8.0
-numexpr==2.8.5
-numpy==1.25.2
-opencv-python==4.11.0.86
-orjson==3.9.2
-outcome==1.2.0
-packaging==23.1
-pandas==2.2.3
-pansi==2020.7.3
-patchright==1.51.3
-pathspec==0.11.1
-Pillow==10.0.0
-platformdirs==3.9.1
-playwright==1.51.0
-pluggy==1.2.0
-pre-commit==3.3.3
-pyasn1==0.6.1
-PyAutoGUI==0.9.54
-pyclick==0.0.2
-pycodestyle==2.10.0
-pycparser==2.21
-pydantic==2.0.3
-pydantic-extra-types==2.0.0
-pydantic-settings==2.0.2
-pydantic_core==2.3.0
-pyee==12.1.1
-pyflakes==3.0.1
-PyGetWindow==0.0.9
-Pygments==2.15.1
-pylint==2.17.4
-pymdown-extensions==10.1
-PyMsgBox==1.0.9
-pyOpenSSL==25.0.0
-pyparsing==3.0.9
-pyperclip==1.9.0
-PyRect==0.2.0
-PyScreeze==1.0.1
-PySocks==1.7.1
-pytest==7.4.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-editor==1.0.4
-python-multipart==0.0.6
-python3-xlib==0.15
-PyTok==1.0.0
-pytweening==1.2.0
-pytz==2023.3
-PyVirtualDisplay==3.0
-PyYAML==6.0.1
-pyyaml_env_tag==0.1
-readchar==4.0.5
-regex==2023.8.8
-reportlab==4.0.4
-requests==2.31.0
-rich==13.4.2
-safetensors==0.3.3
-scrapfly-sdk==0.8.21
+# aiohttp==3.8.5
+# aiosignal==1.3.1
+# annotated-types==0.5.0
+# ansicon==1.89.0
+# anyio==3.7.1
+# astroid==2.15.6
+# async-timeout==4.0.3
+# attrs==23.1.0
+# backoff==2.2.1
+# beautifulsoup4==4.12.2
+# black==23.7.0
+# blessed==1.20.0
+# blinker==1.6.2
+# Brotli==1.1.0
+# bs4==0.0.1
+# certifi==2023.7.22
+# cffi==1.15.1
+# cfgv==3.3.1
+# charset-normalizer==3.2.0
+# chromedriver==2.24.1
+# click==8.1.6
+# colorama==0.4.6
+# config==0.5.1
+# contourpy==1.1.0
+# cryptography==44.0.2
+# cycler==0.11.0
+# dataclasses-json==0.5.14
+# decorator==5.2.1
+# dill==0.3.7
+# distlib==0.3.7
+# dnspython==2.4.1
+# email-validator==2.0.0.post2
+# exceptiongroup==1.1.2
+# fastapi==0.100.1
+# filelock==3.12.2
+# flake8==6.0.0
+# fonttools==4.42.1
+# frozenlist==1.4.0
+# fsspec==2023.9.0
+# ghp-import==2.1.0
+# greenlet==3.1.1
+# h11==0.14.0
+# h2==4.2.0
+# hpack==4.1.0
+# httpcore==0.17.3
+# httptools==0.6.0
+# httpx==0.24.1
+# huggingface-hub==0.16.4
+# hyperframe==6.1.0
+# identify==2.5.26
+# idna==3.4
+# iniconfig==2.0.0
+# inquirer==3.1.3
+# interchange==2021.0.4
+# isort==5.12.0
+# itsdangerous==2.1.2
+# Jinja2==3.1.2
+# jinxed==1.2.0
+# jmespath==1.0.1
+# kaitaistruct==0.10
+# kiwisolver==1.4.5
+# langchain==0.0.281
+# langsmith==0.0.33
+# lazy-object-proxy==1.9.0
+# loguru==0.7.3
+# lxml==5.3.2
+# Markdown==3.4.4
+# markdown-it-py==3.0.0
+# MarkupSafe==2.1.3
+# marshmallow==3.20.1
+# matplotlib==3.7.2
+# mccabe==0.7.0
+# mdurl==0.1.2
+# mergedeep==1.3.4
+# mkdocs==1.5.2
+# mkdocs-material==9.1.21
+# mkdocs-material-extensions==1.1.1
+# monotonic==1.6
+# MouseInfo==0.1.3
+# multidict==6.0.4
+# mypy==1.4.1
+# mypy-extensions==1.0.0
+# networkx==3.1
+# nodeenv==1.8.0
+# numexpr==2.8.5
+# numpy==1.25.2
+# orjson==3.9.2
+# outcome==1.2.0
+# packaging==23.1
+# pandas==2.2.3
+# pansi==2020.7.3
+# patchright==1.51.3
+# pathspec==0.11.1
+# Pillow==10.0.0
+# platformdirs==3.9.1
+# playwright==1.51.0
+# pluggy==1.2.0
+# pre-commit==3.3.3
+# pyasn1==0.6.1
+# PyAutoGUI==0.9.54
+# pyclick==0.0.2
+# pycodestyle==2.10.0
+# pycparser==2.21
+# pydantic==2.0.3
+# pydantic-extra-types==2.0.0
+# pydantic-settings==2.0.2
+# pydantic_core==2.3.0
+# pyee==12.1.1
+# pyflakes==3.0.1
+# PyGetWindow==0.0.9
+# Pygments==2.15.1
+# pylint==2.17.4
+# pymdown-extensions==10.1
+# PyMsgBox==1.0.9
+# pyOpenSSL==25.0.0
+# pyparsing==3.0.9
+# pyperclip==1.9.0
+# PyRect==0.2.0
+# PyScreeze==1.0.1
+# PySocks==1.7.1
+# pytest==7.4.0
+# python-dateutil==2.8.2
+# python-dotenv==1.0.0
+# python-editor==1.0.4
+# python-multipart==0.0.6
+# python3-xlib==0.15
+# PyTok==1.0.0
+# pytweening==1.2.0
+# pytz==2023.3
+# PyVirtualDisplay==3.0
+# PyYAML==6.0.1
+# pyyaml_env_tag==0.1
+# readchar==4.0.5
+# regex==2023.8.8
+# reportlab==4.0.4
+# requests==2.31.0
+# rich==13.4.2
+# safetensors==0.3.3
+# scrapfly-sdk==0.8.21
 selenium==4.11.2
-selenium-wire==5.1.0
-shellingham==1.5.0.post1
-six==1.16.0
-sniffio==1.3.0
-snscrape==0.7.0.20230622
-sortedcontainers==2.4.0
-soupsieve==2.4.1
-SQLAlchemy==2.0.19
-starlette==0.27.0
-tenacity==8.2.3
-TikTokApi==7.1.0
-tokenizers==0.13.3
-tomlkit==0.11.8
+# selenium-wire==5.1.0
+# shellingham==1.5.0.post1
+# six==1.16.0
+# sniffio==1.3.0
+# snscrape==0.7.0.20230622
+# sortedcontainers==2.4.0
+# soupsieve==2.4.1
+# SQLAlchemy==2.0.19
+# starlette==0.27.0
+# tenacity==8.2.3
+# tokenizers==0.13.3
+# tomlkit==0.11.8
 tqdm==4.66.1
-transformers==4.33.1
-trio==0.22.2
-trio-websocket==0.10.3
-typer==0.9.0
-typing-inspect==0.9.0
-typing_extensions==4.13.2
-tzdata==2025.2
-ujson==5.8.0
-undetected-playwright==0.3.0
-urllib3==2.0.4
-uvicorn==0.23.2
-virtualenv==20.24.1
-watchdog==3.0.0
-watchfiles==0.19.0
-wcwidth==0.2.6
-websockets==11.0.3
-wrapt==1.15.0
-wsproto==1.2.0
-xlib==0.21
-yarl==1.9.2
-youtube-dl==2021.12.17
-zstandard==0.23.0
-playwright 
-jmespath
-TikTokApi
+# trio==0.22.2
+# trio-websocket==0.10.3
+# typer==0.9.0
+# typing-inspect==0.9.0
+# typing_extensions==4.13.2
+# tzdata==2025.2
+# ujson==5.8.0
+# undetected-playwright==0.3.0
+# urllib3==2.0.4
+# uvicorn==0.23.2
+# virtualenv==20.24.1
+# watchdog==3.0.0
+# watchfiles==0.19.0
+# wcwidth==0.2.6
+# websockets==11.0.3
+# wrapt==1.15.0
+# wsproto==1.2.0
+# xlib==0.21
+# yarl==1.9.2
+# youtube-dl==2021.12.17
+# zstandard==0.23.0
+# jmespath
+TikTokApi==7.1.0
 yt-dlp>=2023.7.6
-instaloader>=4.10.0
+# instaloader>=4.10.0
+
+requests>=2.31.0,<3.0
+playwright>=1.36.0,<2.0
+httpx>=0.27.0,<1.0
+ffmpeg
